# LangX_training

./: Plan.md  README.md
LangChain/Tutorial/: README.md
LangChain/langx_tutorial/: README.md  main.py  pyproject.toml
LangChain/langx_tutorial_agent/: README.md  main.py  main2.py  pyproject.toml
